scripts/gen/CSVTransParser.py
# Generated from CSVTrans.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSVTransParser ( Parser ):

    grammarFileName = "CSVTrans.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'StreamMap'", "'-->'", "','", "'RESULT:checkSATResult'", 
                     "'KTPS:KeyTypePairSet'", "'('", "')'", "'::'", "'|->'", 
                     "'--'", "'||-->'", "'FVAR--'", "'SAT'", "'emptyAssignment'", 
                     "'is'", "'emptyKTPS'", "'''", "'.'", "').Integer'", 
                     "').NzNat'", "').NzInt'", "').Real'", "').Zero'", "').Bool'", 
                     "').Boolean'", "'i'", "'b'", "'r'", "'['", "']'", "'%'", 
                     "'===='", "<INVALID>", "'///'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'**'", "'*'", "'/'", "'+'", "'-'", "<INVALID>", 
                     "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "MOD", "EQUAL", 
                      "USELESS", "WSAPPEND", "TRUE", "FALSE", "NOT", "EXPO", 
                      "MULT", "DIV", "ADD", "SUB", "COMPARISON", "INEQUAL", 
                      "AND", "XOR", "OR", "TYPE", "ARITHMETICBUILTINFUNCTIONS", 
                      "DATACONVERSIONBUILTINFUNCTIONS", "FOR", "TO", "BY", 
                      "DO", "ENDFOR", "WHILE", "ENDWHILE", "REPEAT", "UNTIL", 
                      "ENDREPEAT", "IF", "THEN", "ELSEIF", "ELSE", "ENDIF", 
                      "CASE", "OF", "ENDCASE", "EXIT", "RETURN", "INT", 
                      "FLOAT", "FRACTION", "ID", "WS" ]

    RULE_start = 0
    RULE_outputresult = 1
    RULE_intputresult = 2
    RULE_typeresult = 3
    RULE_functionblock = 4
    RULE_varname = 5
    RULE_semanticValuesNum = 6
    RULE_semanticValuesBoolean = 7
    RULE_symbolicValues = 8
    RULE_expr = 9
    RULE_number = 10
    RULE_numdatas = 11
    RULE_booldatas = 12
    RULE_exprs = 13

    ruleNames =  [ "start", "outputresult", "intputresult", "typeresult", 
                   "functionblock", "varname", "semanticValuesNum", "semanticValuesBoolean", 
                   "symbolicValues", "expr", "number", "numdatas", "booldatas", 
                   "exprs" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    MOD=31
    EQUAL=32
    USELESS=33
    WSAPPEND=34
    TRUE=35
    FALSE=36
    NOT=37
    EXPO=38
    MULT=39
    DIV=40
    ADD=41
    SUB=42
    COMPARISON=43
    INEQUAL=44
    AND=45
    XOR=46
    OR=47
    TYPE=48
    ARITHMETICBUILTINFUNCTIONS=49
    DATACONVERSIONBUILTINFUNCTIONS=50
    FOR=51
    TO=52
    BY=53
    DO=54
    ENDFOR=55
    WHILE=56
    ENDWHILE=57
    REPEAT=58
    UNTIL=59
    ENDREPEAT=60
    IF=61
    THEN=62
    ELSEIF=63
    ELSE=64
    ENDIF=65
    CASE=66
    OF=67
    ENDCASE=68
    EXIT=69
    RETURN=70
    INT=71
    FLOAT=72
    FRACTION=73
    ID=74
    WS=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def outputresult(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSVTransParser.OutputresultContext)
            else:
                return self.getTypedRuleContext(CSVTransParser.OutputresultContext,i)


        def intputresult(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSVTransParser.IntputresultContext)
            else:
                return self.getTypedRuleContext(CSVTransParser.IntputresultContext,i)


        def typeresult(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSVTransParser.TyperesultContext)
            else:
                return self.getTypedRuleContext(CSVTransParser.TyperesultContext,i)


        def getRuleIndex(self):
            return CSVTransParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = CSVTransParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(CSVTransParser.T__0)
            self.state = 29
            self.match(CSVTransParser.T__1)
            self.state = 30
            self.outputresult()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSVTransParser.T__2:
                self.state = 31
                self.match(CSVTransParser.T__2)
                self.state = 32
                self.outputresult()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(CSVTransParser.T__3)
            self.state = 39
            self.match(CSVTransParser.T__1)
            self.state = 40
            self.intputresult()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSVTransParser.T__5) | (1 << CSVTransParser.T__11) | (1 << CSVTransParser.T__12) | (1 << CSVTransParser.T__13))) != 0):
                self.state = 41
                self.intputresult()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(CSVTransParser.T__4)
            self.state = 48
            self.match(CSVTransParser.T__1)
            self.state = 49
            self.typeresult()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSVTransParser.T__5) | (1 << CSVTransParser.T__15) | (1 << CSVTransParser.T__16))) != 0):
                self.state = 50
                self.typeresult()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputresultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSVTransParser.RULE_outputresult

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OUTPUTEXPRContext(OutputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.OutputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def exprs(self):
            return self.getTypedRuleContext(CSVTransParser.ExprsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOUTPUTEXPR" ):
                listener.enterOUTPUTEXPR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOUTPUTEXPR" ):
                listener.exitOUTPUTEXPR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOUTPUTEXPR" ):
                return visitor.visitOUTPUTEXPR(self)
            else:
                return visitor.visitChildren(self)


    class OUTPUTNUMContext(OutputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.OutputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def numdatas(self):
            return self.getTypedRuleContext(CSVTransParser.NumdatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOUTPUTNUM" ):
                listener.enterOUTPUTNUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOUTPUTNUM" ):
                listener.exitOUTPUTNUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOUTPUTNUM" ):
                return visitor.visitOUTPUTNUM(self)
            else:
                return visitor.visitChildren(self)


    class PARENTHESISContext(OutputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.OutputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def outputresult(self):
            return self.getTypedRuleContext(CSVTransParser.OutputresultContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPARENTHESIS" ):
                listener.enterPARENTHESIS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPARENTHESIS" ):
                listener.exitPARENTHESIS(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPARENTHESIS" ):
                return visitor.visitPARENTHESIS(self)
            else:
                return visitor.visitChildren(self)


    class OUTPUTBOOLContext(OutputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.OutputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def booldatas(self):
            return self.getTypedRuleContext(CSVTransParser.BooldatasContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOUTPUTBOOL" ):
                listener.enterOUTPUTBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOUTPUTBOOL" ):
                listener.exitOUTPUTBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOUTPUTBOOL" ):
                return visitor.visitOUTPUTBOOL(self)
            else:
                return visitor.visitChildren(self)



    def outputresult(self):

        localctx = CSVTransParser.OutputresultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_outputresult)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = CSVTransParser.PARENTHESISContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(CSVTransParser.T__5)
                self.state = 57
                self.outputresult()
                self.state = 58
                self.match(CSVTransParser.T__6)
                pass

            elif la_ == 2:
                localctx = CSVTransParser.OUTPUTNUMContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.functionblock()
                self.state = 61
                self.match(CSVTransParser.T__7)
                self.state = 62
                self.varname()
                self.state = 63
                self.match(CSVTransParser.T__8)
                self.state = 64
                self.numdatas()
                pass

            elif la_ == 3:
                localctx = CSVTransParser.OUTPUTBOOLContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.functionblock()
                self.state = 67
                self.match(CSVTransParser.T__7)
                self.state = 68
                self.varname()
                self.state = 69
                self.match(CSVTransParser.T__8)
                self.state = 70
                self.booldatas()
                pass

            elif la_ == 4:
                localctx = CSVTransParser.OUTPUTEXPRContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.functionblock()
                self.state = 73
                self.match(CSVTransParser.T__7)
                self.state = 74
                self.varname()
                self.state = 75
                self.match(CSVTransParser.T__8)
                self.state = 76
                self.exprs()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntputresultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSVTransParser.RULE_intputresult

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class INPUTNUMContext(IntputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.IntputresultContext
            super().__init__(parser)
            self.step = None # Token
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def semanticValuesNum(self):
            return self.getTypedRuleContext(CSVTransParser.SemanticValuesNumContext,0)

        def INT(self):
            return self.getToken(CSVTransParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINPUTNUM" ):
                listener.enterINPUTNUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINPUTNUM" ):
                listener.exitINPUTNUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINPUTNUM" ):
                return visitor.visitINPUTNUM(self)
            else:
                return visitor.visitChildren(self)


    class INPUTBOOLContext(IntputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.IntputresultContext
            super().__init__(parser)
            self.step = None # Token
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def semanticValuesBoolean(self):
            return self.getTypedRuleContext(CSVTransParser.SemanticValuesBooleanContext,0)

        def INT(self):
            return self.getToken(CSVTransParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterINPUTBOOL" ):
                listener.enterINPUTBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitINPUTBOOL" ):
                listener.exitINPUTBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitINPUTBOOL" ):
                return visitor.visitINPUTBOOL(self)
            else:
                return visitor.visitChildren(self)


    class FRESHVARPARTContext(IntputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.IntputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(CSVTransParser.INT, 0)
        def semanticValuesBoolean(self):
            return self.getTypedRuleContext(CSVTransParser.SemanticValuesBooleanContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFRESHVARPART" ):
                listener.enterFRESHVARPART(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFRESHVARPART" ):
                listener.exitFRESHVARPART(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFRESHVARPART" ):
                return visitor.visitFRESHVARPART(self)
            else:
                return visitor.visitChildren(self)


    class EMPTYINPUTContext(IntputresultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.IntputresultContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEMPTYINPUT" ):
                listener.enterEMPTYINPUT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEMPTYINPUT" ):
                listener.exitEMPTYINPUT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEMPTYINPUT" ):
                return visitor.visitEMPTYINPUT(self)
            else:
                return visitor.visitChildren(self)



    def intputresult(self):

        localctx = CSVTransParser.IntputresultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_intputresult)
        try:
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = CSVTransParser.INPUTNUMContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(CSVTransParser.T__5)
                self.state = 81
                self.functionblock()
                self.state = 82
                self.match(CSVTransParser.T__7)
                self.state = 83
                self.varname()
                self.state = 84
                self.match(CSVTransParser.T__9)
                self.state = 85
                localctx.step = self.match(CSVTransParser.INT)
                self.state = 86
                self.match(CSVTransParser.T__6)
                self.state = 87
                self.match(CSVTransParser.T__10)
                self.state = 88
                self.semanticValuesNum()
                pass

            elif la_ == 2:
                localctx = CSVTransParser.INPUTBOOLContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(CSVTransParser.T__5)
                self.state = 91
                self.functionblock()
                self.state = 92
                self.match(CSVTransParser.T__7)
                self.state = 93
                self.varname()
                self.state = 94
                self.match(CSVTransParser.T__9)
                self.state = 95
                localctx.step = self.match(CSVTransParser.INT)
                self.state = 96
                self.match(CSVTransParser.T__6)
                self.state = 97
                self.match(CSVTransParser.T__10)
                self.state = 98
                self.semanticValuesBoolean()
                pass

            elif la_ == 3:
                localctx = CSVTransParser.FRESHVARPARTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.match(CSVTransParser.T__11)
                self.state = 101
                self.match(CSVTransParser.INT)
                self.state = 102
                self.match(CSVTransParser.T__10)
                self.state = 103
                self.semanticValuesBoolean()
                pass

            elif la_ == 4:
                localctx = CSVTransParser.EMPTYINPUTContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(CSVTransParser.T__12)
                pass

            elif la_ == 5:
                localctx = CSVTransParser.EMPTYINPUTContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(CSVTransParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyperesultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSVTransParser.RULE_typeresult

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EMPTYTYPEContext(TyperesultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.TyperesultContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEMPTYTYPE" ):
                listener.enterEMPTYTYPE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEMPTYTYPE" ):
                listener.exitEMPTYTYPE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEMPTYTYPE" ):
                return visitor.visitEMPTYTYPE(self)
            else:
                return visitor.visitChildren(self)


    class TYPEDATAContext(TyperesultContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.TyperesultContext
            super().__init__(parser)
            self.dataType = None # Token
            self.copyFrom(ctx)

        def functionblock(self):
            return self.getTypedRuleContext(CSVTransParser.FunctionblockContext,0)

        def varname(self):
            return self.getTypedRuleContext(CSVTransParser.VarnameContext,0)

        def TYPE(self):
            return self.getToken(CSVTransParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTYPEDATA" ):
                listener.enterTYPEDATA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTYPEDATA" ):
                listener.exitTYPEDATA(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTYPEDATA" ):
                return visitor.visitTYPEDATA(self)
            else:
                return visitor.visitChildren(self)



    def typeresult(self):

        localctx = CSVTransParser.TyperesultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeresult)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSVTransParser.T__5]:
                localctx = CSVTransParser.TYPEDATAContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(CSVTransParser.T__5)
                self.state = 109
                self.functionblock()
                self.state = 110
                self.match(CSVTransParser.T__7)
                self.state = 111
                self.varname()
                self.state = 112
                self.match(CSVTransParser.T__14)
                self.state = 113
                localctx.dataType = self.match(CSVTransParser.TYPE)
                self.state = 114
                self.match(CSVTransParser.T__6)
                pass
            elif token in [CSVTransParser.T__16]:
                localctx = CSVTransParser.TYPEDATAContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.functionblock()
                self.state = 117
                self.match(CSVTransParser.T__7)
                self.state = 118
                self.varname()
                self.state = 119
                self.match(CSVTransParser.T__14)
                self.state = 120
                localctx.dataType = self.match(CSVTransParser.TYPE)
                pass
            elif token in [CSVTransParser.T__15]:
                localctx = CSVTransParser.EMPTYTYPEContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.match(CSVTransParser.T__15)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(CSVTransParser.ID, 0)

        def getRuleIndex(self):
            return CSVTransParser.RULE_functionblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionblock" ):
                listener.enterFunctionblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionblock" ):
                listener.exitFunctionblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionblock" ):
                return visitor.visitFunctionblock(self)
            else:
                return visitor.visitChildren(self)




    def functionblock(self):

        localctx = CSVTransParser.FunctionblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSVTransParser.T__16)
            self.state = 126
            localctx.name = self.match(CSVTransParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSVTransParser.RULE_varname

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SINGLENAMEContext(VarnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.VarnameContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CSVTransParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSINGLENAME" ):
                listener.enterSINGLENAME(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSINGLENAME" ):
                listener.exitSINGLENAME(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSINGLENAME" ):
                return visitor.visitSINGLENAME(self)
            else:
                return visitor.visitChildren(self)


    class NAMELISTContext(VarnameContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CSVTransParser.VarnameContext
            super().__init__(parser)
            self.name = None # Token
            self.names = None # Token
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSVTransParser.ID)
            else:
                return self.getToken(CSVTransParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNAMELIST" ):
                listener.enterNAMELIST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNAMELIST" ):
                listener.exitNAMELIST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNAMELIST" ):
                return visitor.visitNAMELIST(self)
            else:
                return visitor.visitChildren(self)



    def varname(self):

        localctx = CSVTransParser.VarnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varname)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSVTransParser.T__5]:
                localctx = CSVTransParser.NAMELISTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(CSVTransParser.T__5)
                self.state = 129
                self.match(CSVTransParser.T__16)
                self.state = 130
                localctx.name = self.match(CSVTransParser.ID)
                self.state = 134 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 131
                    self.match(CSVTransParser.T__17)
                    self.state = 132
                    self.match(CSVTransParser.T__16)
                    self.state = 133
                    localctx.names = self.match(CSVTransParser.ID)
                    self.state = 136 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CSVTransParser.T__17):
                        break

                self.state = 138
                self.match(CSVTransParser.T__6)
                pass
            elif token in [CSVTransParser.T__16]:
                localctx = CSVTransParser.SINGLENAMEContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(CSVTransParser.T__16)
                self.state = 140
                localctx.name = self.match(CSVTransParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SemanticValuesNumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(CSVTransParser.NumberContext,0)


        def getRuleIndex(self):
            return CSVTransParser.RULE_semanticValuesNum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSemanticValuesNum" ):
                listener.enterSemanticValuesNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSemanticValuesNum" ):
                listener.exitSemanticValuesNum(self)
